Projects - colour code section completed!

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
         </section>
 		
 		<section>
+		<h1 style="text-align:center;">Key Skills</h1>
+          <h2><p>
+		    <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+		  </p><br></h2>
+        </section>
+		
+		<section>
 		<h1 style="text-align:center;">Previous Jobs</h1>
 		<h3><p>
 		<br></p></h3>
