--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,7 @@
 
     <div class="main-container">
       <header>
-        <h4 style="text-align:center;"><img
-	src="./images/title.png" height="200" width="600" /></h4>
+        <h4 style="text-align:center;"><img	src="./images/title.png" height="200" width="600"/></h4>
       </header>
       <div class="content">
 
@@ -45,10 +44,10 @@
 		  <li>• Persistant data</li>
 		  <li>• Hazard creation</li>
 		  <li>• Ragdoll physics</li>
+		  <br>
+		  Github Repo: <a href="url">link text</a>
 		  <br><br>
 		  VIDEO
-		  <br><br>
-		  Github Repo: <a href="url">link text</a>
 		  <br>
 		  </p></h3>
         </section>
@@ -61,9 +60,9 @@
 		  In Orrery Explorer you are an astral form able to fly around the system with a star in your hand, you are able to throw the star and return it too you. 
 		  The goal of this project was to show off my OpenGL implementation focusing on how light and shadows react to your light source.
 		  <br><br>
-		  VIDEO
+		  Github Repo: <a href="https://github.com/HoaxShark/comp220-worksheetA">Orrery Explorer Github</a>		  
 		  <br><br>
-		  Github Repo: <a href="https://github.com/HoaxShark/comp220-worksheetA">Orrery Explorer Github</a>
+		  VIDEO
 		  <br>
 		  </p></h3>
         </section>
@@ -72,12 +71,17 @@
 		<h1 style="text-align:center;">Colour Code</h1>
           <h3><p>For this project I designed and built a customer controller along with a game to show it off. The idea is a guitar hero styled game where
 		  the player blocks the lights on the controller to block the corresponding lights in the game to save a scared catepillar from being burt alive.
+		  The light beams are randomly picked and set at different intervals, over time the speed increases to build difficulty.
 		  <br><br>
 		  The Controller was digitally modeled and then 3D printed. It connects to an arduino using a sketch I created to control it. The game was written in C++.
 		  <br><br>
-		  VIDEO
-		  <br><br>
 		  Github Repo: <a href="https://github.com/HoaxShark/CustomController">Colour Code Github</a>
+		  <br>
+		  <h2 style="text-align:center;">Images <br>
+		  <img	src="./images/Controller1.jpg" height="200" width="315"/><img	src="./images/Controller2.jpg" height="200" width="315"/></h2>
+		  <br>
+		  <h2 style="text-align:center;">Video
+		  <iframe src="https://drive.google.com/file/d/1ObYPpnykIO9DGa8BGnUdZiYNSvbU9xSS/preview" width="640" height="480"></iframe></h2>
 		  <br>
 		  </p></h3>
         </section>
