changed title image. added information the the index page and removed some little bits from the projects section

--- a/index.html
+++ b/index.html
@@ -43,16 +43,24 @@
 		<h1 style="text-align:center;">Key Skills</h1>
           <h2><p>
 		    <ul>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>● C++</li>
+			  <li>● C#</li>
+			  <li>● Python</li>
+              <li>● Javascript</li>
+			  <li>● Unreal Engine</li>
+              <li>● Unity</li>
+              <li>● OpenGL</li>
+			  <li>● SQLite</li>
             </ul>
 		  </p><br></h2>
         </section>
 		
 		<section>
 		<h1 style="text-align:center;">Previous Jobs</h1>
-		<h3><p>
+		<h3><p>Previous to starting my university course, I spent over 3 years working as an IT Technician at the University of Exeter in a small team 
+		supporting the College of Social Sciences and International Studies. This role helped improve my problem solving skills and gave me the focused 
+		work attitude that I have now. It also let me build good cross team communication skills and gave me the chance to gain well organised self management 
+		practices.
 		<br></p></h3>
 		</section>
 
