--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,9 @@
 		  <li>• Hazard creation</li>
 		  <li>• Ragdoll physics</li>
 		  <br>
+		  As a side project I have created an AI that is able to play the game through some basic levels. The AI checks its surroundings and chooses 
+		  areas to grab if there is a good spot avalible, weighted towards better grabs locations.
+		  <br><br>
 		  Github Repo: <a href="url">link text</a>
 		  <br><br>
 		  VIDEO
@@ -60,10 +63,22 @@
 		  In Orrery Explorer you are an astral form able to fly around the system with a star in your hand, you are able to throw the star and return it too you. 
 		  The goal of this project was to show off my OpenGL implementation focusing on how light and shadows react to your light source.
 		  <br><br>
-		  Github Repo: <a href="https://github.com/HoaxShark/comp220-worksheetA">Orrery Explorer Github</a>		  
+		  Github Repo: <a href="https://github.com/HoaxShark/comp220-worksheetA">Orrery Explorer</a>		  
 		  <br><br>
 		  VIDEO
 		  <br>
+		  </p></h3>
+        </section>
+		
+		<section>
+		<h1 style="text-align:center;">Multi-User Dungeon</h1>
+          <h3><p>I currently have a work in progress MUD in the pipeline. The focus of this work is to practice and demonstrate Data Orientated Programming
+		  along with security management of user data and packets. The client and server have been created using python, the client also uses PYQT5 for GUI interface.
+		  <br><br>
+		  The gameplay of the MUD is currently very basic as my focus has been on usability features such as account creation, multiple characters, data persistance using
+		  SQLite and robust interactions between client and server.
+		  <br><br>
+		  Github Repo: <a href="https://github.com/HoaxShark/comp260-server">Multi-User Dungeon</a>		  
 		  </p></h3>
         </section>
 		
@@ -75,7 +90,7 @@
 		  <br><br>
 		  The Controller was digitally modeled and then 3D printed. It connects to an arduino using a sketch I created to control it. The game was written in C++.
 		  <br><br>
-		  Github Repo: <a href="https://github.com/HoaxShark/CustomController">Colour Code Github</a>
+		  Github Repo: <a href="https://github.com/HoaxShark/CustomController">Colour Code</a>
 		  <br>
 		  <h2 style="text-align:center;">Images <br>
 		  <img	src="./images/Controller1.jpg" height="200" width="315"/><img	src="./images/Controller2.jpg" height="200" width="315"/></h2>
