added link to the inkd scripts repo fixed spelling mistakes throughout the site

--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
         <section>
 		<h1 style="text-align:center;">Ink'd</h1>
           <h3><p>Ink'd is my second year group project designed in the Unity Engine using C#. It aims to provide short levels so that it can be played in small bursts.
-		  It has an inovative physics based movement system that helps set it apart from other games.<br><br>
+		  It has an innovative physics based movement system that helps set it apart from other games.<br><br>
 		  
 		  My main roles on the project:
 		  <ul>
@@ -44,11 +44,12 @@
 		  <li>• Persistant data</li>
 		  <li>• Hazard creation</li>
 		  <li>• Ragdoll physics</li>
+		  <li>• Waypoint system</li>
 		  <br>
 		  As a side project I have created an AI that is able to play the game through some basic levels. The AI checks its surroundings and chooses 
-		  areas to grab if there is a good spot avalible, weighted towards better grabs locations.
+		  areas to grab if there is a good spot available, weighted towards better grabs locations.
 		  <br><br>
-		  Github Repo: <a href="url">link text</a>
+		  Github Repo: <a href="https://github.com/HoaxShark/inkdSourceCode">Ink'd</a>
 		  <br><br>
 		  VIDEO
 		  <br>
@@ -85,7 +86,7 @@
 		<section>
 		<h1 style="text-align:center;">Colour Code</h1>
           <h3><p>For this project I designed and built a customer controller along with a game to show it off. The idea is a guitar hero styled game where
-		  the player blocks the lights on the controller to block the corresponding lights in the game to save a scared catepillar from being burt alive.
+		  the player blocks the lights on the controller to block the corresponding lights in the game to save a scared caterpillar from being burnt alive.
 		  The light beams are randomly picked and set at different intervals, over time the speed increases to build difficulty.
 		  <br><br>
 		  The Controller was digitally modeled and then 3D printed. It connects to an arduino using a sketch I created to control it. The game was written in C++.
