put my phone number correctly now. added an intro section to the projects page directing people the the README.md of each project

--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,13 @@
         </aside>
 
         <section>
+		<h1 style="text-align:center;">Projects</h1>
+          <h3><p>All projects below are either entirely my own work or group projects. Please read the README.md in the Github
+		  repositories for UML diagrams relevant to the structure of that project.
+		  </p></h3>
+        </section>
+
+        <section>
 		<h1 style="text-align:center;">Ink'd</h1>
           <h3><p>Ink'd is my second year group project designed in the Unity Engine using C#. It aims to provide short levels so that it can be played in small bursts.
 		  It has an innovative physics based movement system that helps set it apart from other games.<br><br>
