added images and video into the ink'd project section

--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,12 @@
 		  <br><br>
 		  Github Repo: <a href="https://github.com/HoaxShark/inkdSourceCode">Ink'd</a>
 		  <br><br>
-		  VIDEO
+		  <h2 style="text-align:center;">Images <br>
+		  <img	src="./images/mainmenu.jpg" height="200" width="310"/><img	src="./images/level1.jpg" height="200" width="310"/>
+		  <img	src="./images/darkIntro.jpg" height="200" width="310"/><img	src="./images/tumbling.jpg" height="200" width="310"/>
+		  </h2>
+		  <br>
+		  <iframe src="https://drive.google.com/file/d/1Mf6FG9QKczcoyDgvbyzXOok4lAhsVe16/preview" width="640" height="480"></iframe>
 		  <br>
 		  </p></h3>
         </section>
