added the video for explorer and cut the video for colour code a lot, did explorer images too. also filled out the who i am section

--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,10 @@
 		  <br><br>
 		  Github Repo: <a href="https://github.com/HoaxShark/comp220-worksheetA">Orrery Explorer</a>		  
 		  <br><br>
-		  VIDEO
+		  <h2 style="text-align:center;">Images <br>
+		  <img	src="./images/shootingStar.png" height="200" width="315"/><img	src="./images/closeStar.png" height="200" width="315"/></h2>
+		  <br>
+		  <iframe src="https://drive.google.com/file/d/1-jLI7W_W0DoRtJieqpG0nLPTUC_9hwnM/preview" width="640" height="480"></iframe>
 		  <br>
 		  </p></h3>
         </section>
@@ -109,7 +112,7 @@
 		  <img	src="./images/Controller1.jpg" height="200" width="315"/><img	src="./images/Controller2.jpg" height="200" width="315"/></h2>
 		  <br>
 		  <h2 style="text-align:center;">Video
-		  <iframe src="https://drive.google.com/file/d/1ObYPpnykIO9DGa8BGnUdZiYNSvbU9xSS/preview" width="640" height="480"></iframe>
+		  <iframe src="https://drive.google.com/file/d/1K8Rs7HgEYw2TCw03g_jiY6nuou2CfiQU/preview" width="640" height="480"></iframe>
 		  <br>
 		  </p></h3>
         </section>
