swapped to my gmail instead of live account for contact

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <section>
 		<h1 style="text-align:center;">Contact Information</h1>
 			<h3>
-			E-mail: hoaxshark@live.com<br>
+			E-mail: hoaxshark@gmail.com<br>
 			Phone: 07495397856<br>
 			</h3>
         </section>
