added battlebarn to projects.html added video and images for MUD

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<h1 style="text-align:center;">Who I Am</h1>
           <h3><p> Hi, I'm second year student studying BSc Computing for games at Falmouth University. Over the past few years I've been able to passionately follow 
 		  my goal to become a software/game programmer. I'm yet to specialise in a field instead walking the path of discovery by trying everything I can. That being said
-		  I have recently been delving into the realm of AI and have found a great interest in it.</p><br></h3>
+		  I have an enjoyment for gameplay programming and have recently been delving into the realm of AI finding great interest in it.</p><br></h3>
         </section>
 		
 		<section>
