--- a/projects.html
+++ b/projects.html
@@ -63,8 +63,24 @@
 		  <img	src="./images/darkIntro.jpg" height="200" width="310"/><img	src="./images/tumbling.jpg" height="200" width="310"/>
 		  </h2>
 		  <br>
+		  <h2 style="text-align:center;">Video
 		  <iframe src="https://drive.google.com/file/d/1Mf6FG9QKczcoyDgvbyzXOok4lAhsVe16/preview" width="640" height="480"></iframe>
+		  <br></h2>
+		  </p></h3>
+        </section>
+		
+		<section>
+		<h1 style="text-align:center;">Battlebarn</h1>
+          <h3><p>Battlebarn was my first year group project built in the Unreal engine with a mix of C++ and Blueprints. It's a local 2-4 player chaotic twin stick shooter
+		  placing barnyard animals against each other. Each animal has its own weapon type and a single cooldown to add variety for the players. There are pick ups designed 
+		  to give you an edge by hindering your enemies.
+		  <br><br>
+		  <h2 style="text-align:center;">Images <br>
+		  <img	src="./images/bbmenu.png" height="200" width="315"/><img	src="./images/bbbattle.png" height="200" width="315"/></h2>
 		  <br>
+		  <h2 style="text-align:center;">Video
+		  <iframe src="https://drive.google.com/file/d/1MGGyKQGH2e8qiaFPwb68HiSybtov5qqp/preview" width="640" height="480"></iframe>
+		  <br></h2>
 		  </p></h3>
         </section>
 		
@@ -81,8 +97,9 @@
 		  <h2 style="text-align:center;">Images <br>
 		  <img	src="./images/shootingStar.png" height="200" width="315"/><img	src="./images/closeStar.png" height="200" width="315"/></h2>
 		  <br>
+		  <h2 style="text-align:center;">Video
 		  <iframe src="https://drive.google.com/file/d/1-jLI7W_W0DoRtJieqpG0nLPTUC_9hwnM/preview" width="640" height="480"></iframe>
-		  <br>
+		  <br></h2>
 		  </p></h3>
         </section>
 		
@@ -91,10 +108,17 @@
           <h3><p>I currently have a work in progress MUD in the pipeline. The focus of this work is to practice and demonstrate Data Orientated Programming
 		  along with security management of user data and packets. The client and server have been created using python, the client also uses PYQT5 for GUI interface.
 		  <br><br>
-		  The gameplay of the MUD is currently very basic as my focus has been on usability features such as account creation, multiple characters, data persistance using
+		  The gameplay of the MUD is currently very basic as my focus has been on usability features such as account creation, multiple characters, data persistence using
 		  SQLite and robust interactions between client and server.
 		  <br><br>
-		  Github Repo: <a href="https://github.com/HoaxShark/comp260-server">Multi-User Dungeon</a>		  
+		  Github Repo: <a href="https://github.com/HoaxShark/comp260-server">Multi-User Dungeon</a>
+		  <br>
+		  <h2 style="text-align:center;">Images <br>
+		  <img	src="./images/mud.png" height="200" width="315"/><img	src="./images/mud2.png" height="200" width="315"/></h2>
+		  <br>
+		  <h2 style="text-align:center;">Video
+		  <iframe src="https://drive.google.com/file/d/13JG1PUCMLvtPkoqPk214C-CUjHKuXq94/preview" width="640" height="480"></iframe>
+		  <br></h2>
 		  </p></h3>
         </section>
 		
@@ -113,7 +137,7 @@
 		  <br>
 		  <h2 style="text-align:center;">Video
 		  <iframe src="https://drive.google.com/file/d/1K8Rs7HgEYw2TCw03g_jiY6nuou2CfiQU/preview" width="640" height="480"></iframe>
-		  <br>
+		  <br></h2>
 		  </p></h3>
         </section>
 		
