--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,9 @@
 
         <section>
 		<h1 style="text-align:center;">Contact Information</h1>
-			<h3>
-			E-mail: hoaxshark@gmail.com<br>
+			<h3 style="text-align:center;">
+			<br>
+			E-mail: hoaxshark@gmail.com<br><br>
 			Phone: 07495397856<br>
 			</h3>
         </section>
